<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:title="@string/Profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_list"
        android:title="@string/userlist"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/favoritelist"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_browse"
        android:title="@string/browse"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_post"
        android:title="@string/post"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_my"
        android:title="@string/mypost"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />
</menu>